group 'pl.edu.agh.to2'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

apply plugin: 'java'
apply plugin: 'application'

application {
    applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
    mainClass = 'pl.edu.agh.school.demo.SchoolDemo'
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

test {
    useJUnitPlatform()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.13.4'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.13.4'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.5.11'
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.5.11'

    implementation group: 'com.google.inject', name: 'guice', version: '7.0.0'
}
